--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Remove AndroidX Startup auto-initialization -->
+    <provider
+        android:name="androidx.startup.InitializationProvider"
+        android:authorities="${applicationId}.androidx-startup"
+        tools:node="remove" />
+
     <application
         android:name=".ChamaBuddy"
         android:allowBackup="true"
@@ -13,6 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChamaBuddy"
         tools:targetApi="31">
+
+        <!-- Launcher Activity -->
         <activity
             android:name=".ChamaBuddyApp"
             android:exported="true"
@@ -20,10 +31,10 @@
             android:theme="@style/Theme.ChamaBuddy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
