chama trust app version 18 with with all local functionalities done solved with fire base implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,6 @@
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- Remove AndroidX Startup auto-initialization -->
-    <provider
-        android:name="androidx.startup.InitializationProvider"
-        android:authorities="${applicationId}.androidx-startup"
-        tools:node="remove" />
-
     <application
         android:name=".ChamaBuddy"
         android:allowBackup="true"
@@ -22,6 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChamaBuddy"
         tools:targetApi="31">
+
+        <!-- Disable WorkManager auto-init via AndroidX Startup -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data
+                android:name="androidx.work.WorkManagerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+        </provider>
 
         <!-- Launcher Activity -->
         <activity
